syntax = "proto3";

message TestBasicTypes {
  bool bool_field = 1;
  int32 int32_field = 2;
  int64 int64_field = 3;
  uint32 uint32_field = 4;
  uint64 uint64_field = 5;
  float float_field = 6;
  double double_field = 7;
}
